# fastapi-starter-template

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  tox.ini
app/: main.py
app/api/endpoints/: hello.py
app/core/: application.py  config.py  logger.py
src/fapistl/: __init__.py  constants.py  enums.py  types.py
tests/: conftest.py
tests/endpoints/: hello_test.py
