[tool.poetry]
name = "fastapi-starter-template"
version = "0.1.0"
description = "FastAPI teamplate with tests and precommit"
authors = ["Vamsi NC <nc.vamsi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
pre-commit = "^2.6.0"
tox = "^3.19.0"
pytest-cov = "^2.10.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
